events sort by date and soonest event is larger

--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -1,4 +1,5 @@
-.card-title > fieldset:first-child {
-  font-size: 30px;
+.card-items > div:first-child {
   font-weight: bold;
+  font-size: 20px;
+  background-color: rgb(201, 173, 178)
 }
