--- a/src/components/news/News.css
+++ b/src/components/news/News.css
@@ -1,10 +1,3 @@
-.newsButton{
-  display:flex;
-  justify-content:center;
-  flex-direction:row;
-  margin-top:10px;
-
-}
 .newsCards{
   display:flex;
   justify-content: space-around;
@@ -13,4 +6,25 @@
   flex-wrap:wrap;
   width:20%;
   border:1px solid gray;
+  padding:20px;
+  background-color:#707884;
+  color:white;
+  box-shadow:2px 2px 8px gray;
+  border-radius:15px;
+
+}
+.newsButton{
+  display:flex;
+  justify-content:center;
+  flex-direction:row;
+  margin-top:10px;
+
+}
+.heading{
+  text-align:center;
+}
+.cardHolder{
+  display:flex;
+  justify-content: space-around;
+  flex-direction:row;
 }
